www/css/style.css
div .profile-content {
  text-align: center;
}

.profile-image {
  max-width: 100%;
  height: auto;
}

.match{
  background-color:#387EF5;
}

.no-match{
  background-color:#EF473A;
}

#h4 {
  font-size: 18px; 
  font-weight: bold;
  color:#ffffff;
}


.swipe-page {

}

.swipe-page .current-candidate {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;

  -webkit-transition:all cubic-bezier(0.420, 0.000, 1.000, 1.000) 0.25s;
  transition:all cubic-bezier(0.420, 0.000, 1.000, 1.000) 0.25s;
}

.swipe-page .current-candidate .item-image {
  max-height:300px;
  overflow:hidden;
}

/*.item {
  overflow:visible;
  word-wrap:break-word;
}*/

@media screen and (max-height: 600px) {
  .swipe-page .current-candidate .item-image {
    max-height:200px;
    overflow:hidden;
  }
}

.swipe-page .current-candidate.favorited.ng-hide {
  -webkit-transform: translateX(1000px) rotate(50deg);
  -ms-transform: translateX(1000px) rotate(50deg);
  transform: translateX(1000px) rotate(50deg);
  opacity:0;
}

.swipe-page .current-candidate.skipped.ng-hide {
  -webkit-transform: translateX(-1000px) rotate(-50deg);
  -ms-transform: translateX(-1000px) rotate(-50deg);
  transform: translateX(-1000px) rotate(-50deg);
  opacity:0;
}

.swipe-page .current-candidate.ng-hide-add {
  -webkit-transition:all cubic-bezier(0.420, 0.000, 1.000, 1.000) 0.3s;
  transition:all cubic-bezier(0.420, 0.000, 1.000, 1.000) 0.3s;
  display:block!important;
}

.swipe-page .current-candidate.ng-hide-remove {
  -webkit-transform: scale(0.7) translateX(0px) rotate(0deg);
  -ms-transform: scale(0.7) translateX(0px) rotate(0deg);
  transform: scale(0.7) translateX(0px) rotate(0deg);
  opacity: 0;
}


.swipe-page .img-lookahead img {
  height:1px;
  width:1px;
  opacity:0.01;
}


.button-medium {
  padding: 4px 6px 4px;
  margin-left:23px;
  margin-right:23px; 
  min-width: 100px;
  min-height: 43px;
  font-size: 18px;
  line-height: 42px; 
}

/*.account-buttons {
  text-align: center;
}*/

